force-app/main/default/objects/SiebelContract__x/SiebelContract__x.object-meta.xml
<CustomObject>
    <description>SiebelContract</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelContract</externalName>
    <label>Contratto Siebel</label>
    <pluralLabel>Contratti Siebel</pluralLabel>
</CustomObject>