force-app/main/default/objects/SiebelContract__x/fields/END_DT__c.field-meta.xml
<CustomField>
    <fullName>END_DT__c</fullName>
    <description>END_DT</description>
    <externalDeveloperName>END_DT</externalDeveloperName>
    <label>Data cessazione</label>
    <type>Date</type>
</CustomField>