force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_ADDR__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_ADDR__c</fullName>
    <description>IMPIANTO_ADDR</description>
    <externalDeveloperName>IMPIANTO_ADDR</externalDeveloperName>
    <label>Via</label>
    <length>200</length>
    <type>Text</type>
</CustomField>