force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_ASSET_NUM__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_ASSET_NUM__c</fullName>
    <description>IMPIANTO_ASSET_NUM</description>
    <externalDeveloperName>IMPIANTO_ASSET_NUM</externalDeveloperName>
    <label>Numero impianto fornitura</label>
    <length>100</length>
    <type>Text</type>
</CustomField>