force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_ATTRIB_34__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_ATTRIB_34__c</fullName>
    <description>IMPIANTO_ATTRIB_34</description>
    <externalDeveloperName>IMPIANTO_ATTRIB_34</externalDeveloperName>
    <label>Venditore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>