force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_ATTRIB_36__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_ATTRIB_36__c</fullName>
    <description>IMPIANTO_ATTRIB_36</description>
    <externalDeveloperName>IMPIANTO_ATTRIB_36</externalDeveloperName>
    <label>Tipo impianto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>