force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_CITY__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_CITY__c</fullName>
    <description>IMPIANTO_CITY</description>
    <externalDeveloperName>IMPIANTO_CITY</externalDeveloperName>
    <label>Comune</label>
    <length>50</length>
    <type>Text</type>
</CustomField>