force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_COUNTRY__c</fullName>
    <description>IMPIANTO_COUNTRY</description>
    <externalDeveloperName>IMPIANTO_COUNTRY</externalDeveloperName>
    <label>Stato</label>
    <length>30</length>
    <type>Text</type>
</CustomField>