force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_DISTRICT__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_DISTRICT__c</fullName>
    <description>IMPIANTO_DISTRICT</description>
    <externalDeveloperName>IMPIANTO_DISTRICT</externalDeveloperName>
    <label>Località</label>
    <length>50</length>
    <type>Text</type>
</CustomField>