force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_INSTALL_DT__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_INSTALL_DT__c</fullName>
    <description>IMPIANTO_INSTALL_DT</description>
    <externalDeveloperName>IMPIANTO_INSTALL_DT</externalDeveloperName>
    <label>Data decorrenza</label>
    <type>Date</type>
</CustomField>