force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_PROVINCE__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_PROVINCE__c</fullName>
    <description>IMPIANTO_PROVINCE</description>
    <externalDeveloperName>IMPIANTO_PROVINCE</externalDeveloperName>
    <label>Provincia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>