force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_X_COMP_ADDR__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_X_COMP_ADDR__c</fullName>
    <description>IMPIANTO_X_COMP_ADDR</description>
    <externalDeveloperName>IMPIANTO_X_COMP_ADDR</externalDeveloperName>
    <label>Indirizzo completo</label>
    <length>250</length>
    <type>Text</type>
</CustomField>