force-app/main/default/objects/SiebelContract__x/fields/IMPIANTO_X_ISTAT_VIA__c.field-meta.xml
<CustomField>
    <fullName>IMPIANTO_X_ISTAT_VIA__c</fullName>
    <description>IMPIANTO_X_ISTAT_VIA</description>
    <externalDeveloperName>IMPIANTO_X_ISTAT_VIA</externalDeveloperName>
    <label>Istat</label>
    <length>30</length>
    <type>Text</type>
</CustomField>