force-app/main/default/objects/SiebelContract__x/fields/PROD_CATG_CD__c.field-meta.xml
<CustomField>
    <fullName>PROD_CATG_CD__c</fullName>
    <description>PROD_CATG_CD</description>
    <externalDeveloperName>PROD_CATG_CD</externalDeveloperName>
    <label>Settore merceologico</label>
    <length>30</length>
    <type>Text</type>
</CustomField>