force-app/main/default/objects/SiebelContract__x/fields/PURCH_DT__c.field-meta.xml
<CustomField>
    <fullName>PURCH_DT__c</fullName>
    <description>PURCH_DT</description>
    <externalDeveloperName>PURCH_DT</externalDeveloperName>
    <label>Data stipula</label>
    <type>Date</type>
</CustomField>