force-app/main/default/objects/SiebelContract__x/fields/START_DT__c.field-meta.xml
<CustomField>
    <fullName>START_DT__c</fullName>
    <description>START_DT</description>
    <externalDeveloperName>START_DT</externalDeveloperName>
    <label>Data attivazione</label>
    <type>Date</type>
</CustomField>