force-app/main/default/objects/SiebelContract__x/fields/STATUS_CHG_DT__c.field-meta.xml
<CustomField>
    <fullName>STATUS_CHG_DT__c</fullName>
    <description>STATUS_CHG_DT</description>
    <externalDeveloperName>STATUS_CHG_DT</externalDeveloperName>
    <label>Data stato</label>
    <type>Date</type>
</CustomField>