force-app/main/default/objects/SiebelContract__x/fields/X_BILL_DESC__c.field-meta.xml
<CustomField>
    <fullName>X_BILL_DESC__c</fullName>
    <description>X_BILL_DESC</description>
    <externalDeveloperName>X_BILL_DESC</externalDeveloperName>
    <label>Descrizione Periodicità fatturazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>