force-app/main/default/objects/SiebelContract__x/fields/X_CA_INACTIVE__c.field-meta.xml
<CustomField>
    <fullName>X_CA_INACTIVE__c</fullName>
    <description>X_CA_INACTIVE</description>
    <externalDeveloperName>X_CA_INACTIVE</externalDeveloperName>
    <label>Conto contrattuale inattivo</label>
    <length>1</length>
    <type>Text</type>
</CustomField>