force-app/main/default/objects/SiebelContract__x/fields/X_COD_DEST_DIV__c.field-meta.xml
<CustomField>
    <fullName>X_COD_DEST_DIV__c</fullName>
    <description>X_COD_DEST_DIV</description>
    <externalDeveloperName>X_COD_DEST_DIV</externalDeveloperName>
    <label>Codice destinatario divergente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>