force-app/main/default/objects/SiebelContract__x/fields/X_COD_OFF__c.field-meta.xml
<CustomField>
    <fullName>X_COD_OFF__c</fullName>
    <description>X_COD_OFF</description>
    <externalDeveloperName>X_COD_OFF</externalDeveloperName>
    <label>Cod. offerta commerciale</label>
    <length>30</length>
    <type>Text</type>
</CustomField>