force-app/main/default/objects/SiebelContract__x/fields/X_CODICE_REMI__c.field-meta.xml
<CustomField>
    <fullName>X_CODICE_REMI__c</fullName>
    <description>X_CODICE_REMI</description>
    <externalDeveloperName>X_CODICE_REMI</externalDeveloperName>
    <label>Codice Remi</label>
    <length>100</length>
    <type>Text</type>
</CustomField>