force-app/main/default/objects/SiebelContract__x/fields/X_CONT_CLASS__c.field-meta.xml
<CustomField>
    <fullName>X_CONT_CLASS__c</fullName>
    <description>X_CONT_CLASS</description>
    <externalDeveloperName>X_CONT_CLASS</externalDeveloperName>
    <label>Classe Conto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>