force-app/main/default/objects/SiebelContract__x/fields/X_DELTA_CUMULATO__c.field-meta.xml
<CustomField>
    <fullName>X_DELTA_CUMULATO__c</fullName>
    <description>X_DELTA_CUMULATO</description>
    <externalDeveloperName>X_DELTA_CUMULATO</externalDeveloperName>
    <label>Delta cumulato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>