force-app/main/default/objects/SiebelContract__x/fields/X_DEPOSIT_REQ__c.field-meta.xml
<CustomField>
    <fullName>X_DEPOSIT_REQ__c</fullName>
    <description>X_DEPOSIT_REQ</description>
    <externalDeveloperName>X_DEPOSIT_REQ</externalDeveloperName>
    <label>Deposito originario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>