force-app/main/default/objects/SiebelContract__x/fields/X_DETERM_CONTI_DESC__c.field-meta.xml
<CustomField>
    <fullName>X_DETERM_CONTI_DESC__c</fullName>
    <description>X_DETERM_CONTI_DESC</description>
    <externalDeveloperName>X_DETERM_CONTI_DESC</externalDeveloperName>
    <label>Descrizione caratt. determ. conti</label>
    <length>30</length>
    <type>Text</type>
</CustomField>