force-app/main/default/objects/SiebelContract__x/fields/X_DOM_STATUS__c.field-meta.xml
<CustomField>
    <fullName>X_DOM_STATUS__c</fullName>
    <description>X_DOM_STATUS</description>
    <externalDeveloperName>X_DOM_STATUS</externalDeveloperName>
    <label>Stato ultima domiciliazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>