force-app/main/default/objects/SiebelContract__x/fields/X_DOMIC_DESCR__c.field-meta.xml
<CustomField>
    <fullName>X_DOMIC_DESCR__c</fullName>
    <description>X_DOMIC_DESCR</description>
    <externalDeveloperName>X_DOMIC_DESCR</externalDeveloperName>
    <label>Estremi ultima domiciliazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>