force-app/main/default/objects/SiebelContract__x/fields/X_EMAIL_BOLL__c.field-meta.xml
<CustomField>
    <fullName>X_EMAIL_BOLL__c</fullName>
    <description>X_EMAIL_BOLL</description>
    <externalDeveloperName>X_EMAIL_BOLL</externalDeveloperName>
    <label>E-mail invio bolletta</label>
    <length>250</length>
    <type>Text</type>
</CustomField>