force-app/main/default/objects/SiebelContract__x/fields/X_END_CONTRACT__c.field-meta.xml
<CustomField>
    <fullName>X_END_CONTRACT__c</fullName>
    <description>X_END_CONTRACT</description>
    <externalDeveloperName>X_END_CONTRACT</externalDeveloperName>
    <label>Data cessazione</label>
    <type>Date</type>
</CustomField>