force-app/main/default/objects/SiebelContract__x/fields/X_FATTURA_COLL__c.field-meta.xml
<CustomField>
    <fullName>X_FATTURA_COLL__c</fullName>
    <description>X_FATTURA_COLL</description>
    <externalDeveloperName>X_FATTURA_COLL</externalDeveloperName>
    <label>Fattura collettiva</label>
    <length>15</length>
    <type>Text</type>
</CustomField>