force-app/main/default/objects/SiebelContract__x/fields/X_IBAN__c.field-meta.xml
<CustomField>
    <fullName>X_IBAN__c</fullName>
    <description>X_IBAN</description>
    <externalDeveloperName>X_IBAN</externalDeveloperName>
    <label>IBAN</label>
    <length>34</length>
    <type>Text</type>
</CustomField>