force-app/main/default/objects/SiebelContract__x/fields/X_NUM_RECESS__c.field-meta.xml
<CustomField>
    <fullName>X_NUM_RECESS__c</fullName>
    <description>X_NUM_RECESS</description>
    <externalDeveloperName>X_NUM_RECESS</externalDeveloperName>
    <label>Unità di tempo per recesso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>