force-app/main/default/objects/SiebelContract__x/fields/X_OLD_CONTRACT_CD__c.field-meta.xml
<CustomField>
    <fullName>X_OLD_CONTRACT_CD__c</fullName>
    <description>X_OLD_CONTRACT_CD</description>
    <externalDeveloperName>X_OLD_CONTRACT_CD</externalDeveloperName>
    <label>N. contratto sistema Legacy</label>
    <length>30</length>
    <type>Text</type>
</CustomField>