force-app/main/default/objects/SiebelContract__x/fields/X_PAG_RAPP__c.field-meta.xml
<CustomField>
    <fullName>X_PAG_RAPP__c</fullName>
    <description>X_PAG_RAPP</description>
    <externalDeveloperName>X_PAG_RAPP</externalDeveloperName>
    <label>Tipo sottoscrittore CC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>