force-app/main/default/objects/SiebelContract__x/fields/X_RENEW__c.field-meta.xml
<CustomField>
    <fullName>X_RENEW__c</fullName>
    <description>X_RENEW</description>
    <externalDeveloperName>X_RENEW</externalDeveloperName>
    <label>Marca per il rinnovo</label>
    <length>1</length>
    <type>Text</type>
</CustomField>