force-app/main/default/objects/SiebelContract__x/fields/X_SHIP_ADDR__c.field-meta.xml
<CustomField>
    <fullName>X_SHIP_ADDR__c</fullName>
    <description>X_SHIP_ADDR</description>
    <externalDeveloperName>X_SHIP_ADDR</externalDeveloperName>
    <label>Indirizzo recapito conto contrattuale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>