force-app/main/default/objects/SiebelContract__x/fields/X_SOTTOSCRITTORE__c.field-meta.xml
<CustomField>
    <fullName>X_SOTTOSCRITTORE__c</fullName>
    <description>X_SOTTOSCRITTORE</description>
    <externalDeveloperName>X_SOTTOSCRITTORE</externalDeveloperName>
    <label>Sottoscrittore (codice)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>