force-app/main/default/objects/SiebelContract__x/fields/X_TYPE_EXTENSION__c.field-meta.xml
<CustomField>
    <fullName>X_TYPE_EXTENSION__c</fullName>
    <description>X_TYPE_EXTENSION</description>
    <externalDeveloperName>X_TYPE_EXTENSION</externalDeveloperName>
    <label>Unità di tempo per proroga</label>
    <length>30</length>
    <type>Text</type>
</CustomField>