force-app/main/default/objects/SiebelContract__x/fields/X_TYPE_RECESS__c.field-meta.xml
<CustomField>
    <fullName>X_TYPE_RECESS__c</fullName>
    <description>X_TYPE_RECESS</description>
    <externalDeveloperName>X_TYPE_RECESS</externalDeveloperName>
    <label>Unità di tempo per recesso</label>
    <length>30</length>
    <type>Text</type>
</CustomField>