force-app/main/default/objects/SiebelContract__x/fields/X_TYPE_REMOVAL__c.field-meta.xml
<CustomField>
    <fullName>X_TYPE_REMOVAL__c</fullName>
    <description>X_TYPE_REMOVAL</description>
    <externalDeveloperName>X_TYPE_REMOVAL</externalDeveloperName>
    <label>Unità di tempo per disdetta</label>
    <length>30</length>
    <type>Text</type>
</CustomField>